<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedyNotify</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="background">Background</string>
    <string name="image">Imagen</string>
    <string name="text">Texto</string>
    <string name="text_user">Usuario:</string>
    <string name="text_password">Password:</string>
    <string name="text_accept">Aceptar</string>
    <string name="juan">Juan Manuel Sánchez Gómez</string>
    <string name="hector">Hector</string>
    <string name="diego">Diego Sandobal</string>
    <string name="register">Registrarse</string>

</resources>