<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:contentDescription="@string/image"
            android:src="@drawable/logo_medinotify" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_User"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/text_user" />

        <EditText
            android:id="@+id/editText_User"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView_textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password" />

        <EditText
            android:id="@+id/editText_Pasword"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/button_Accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_accept" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>

</LinearLayout>